<resources>
    <string name="app_name">Guardian Reader</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_personalise">Personalise</string>

    <string-array name="titles">
        <item>@string/pref_title_headlines_aus</item>
        <item>@string/pref_title_headlines_uk</item>
        <item>@string/pref_title_headlines_us</item>
        <item>@string/pref_title_headlines_world</item>
        <item>@string/pref_title_art_design</item>
        <item>@string/pref_title_books</item>
        <item>@string/pref_title_business</item>
        <item>@string/pref_title_culture</item>
        <item>@string/pref_title_education</item>
        <item>@string/pref_title_environment</item>
        <item>@string/pref_title_fashion</item>
        <item>@string/pref_title_film</item>
        <item>@string/pref_title_football</item>
        <item>@string/pref_title_law</item>
        <item>@string/pref_title_life_style</item>
        <item>@string/pref_title_media</item>
        <item>@string/pref_title_money</item>
        <item>@string/pref_title_music</item>
        <item>Australia News</item>
        <item>UK News</item>
        <item>US News</item>
        <item>World News</item>
        <item>@string/pref_title_opinion</item>
        <item>@string/pref_title_politics</item>
        <item>@string/pref_title_science</item>
        <item>@string/pref_title_society</item>
        <item>@string/pref_title_sport</item>
        <item>@string/pref_title_stage</item>
        <item>@string/pref_title_tech</item>
        <item>@string/pref_title_travel</item>
        <item>@string/pref_title_tv_radio</item>
        <item>@string/pref_title_weather</item>
        <item>@string/pref_title_saved</item>
        <item>@string/pref_title_search</item>
    </string-array>

    <!--List preference default edition-->
    <string-array name="default_entries">
        <item>@string/pref_title_headlines_aus</item>
        <item>@string/pref_title_headlines_uk</item>
        <item>@string/pref_title_headlines_us</item>
        <item>@string/pref_title_headlines_world</item>
    </string-array>
    <string-array name="default_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!--List Preference default browser-->
    <string-array name="default_browser_entries">
        <item>@string/pref_in_app_browser</item>
        <item>@string/pref_system_browser</item>
    </string-array>
    <string-array name="default_browser_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_default_browser">Read articles in…</string>
    <string name="pref_in_app_browser">In-app browser</string>
    <string name="pref_system_browser">System browser</string>

    <!--navbar pref keys -->
    <string name="pref_key_aus_headlines" translatable="false">pref_section_headlines_aus</string>
    <string name="pref_key_uk_headlines" translatable="false">pref_section_headlines_uk</string>
    <string name="pref_key_us_headlines" translatable="false">pref_section_headlines_us</string>
    <string name="pref_key_int_headlines" translatable="false">pref_section_headlines_int</string>

    <string name="pref_key_art_design" translatable="false">pref_section_art_design</string>
    <string name="pref_key_books" translatable="false">pref_section_books</string>
    <string name="pref_key_business" translatable="false">pref_section_business</string>
    <string name="pref_key_culture" translatable="false">pref_section_culture</string>
    <string name="pref_key_education" translatable="false">pref_section_education</string>
    <string name="pref_key_environment" translatable="false">pref_section_environment</string>
    <string name="pref_key_fashion" translatable="false">pref_section_fashion</string>
    <string name="pref_key_film" translatable="false">pref_section_film</string>
    <string name="pref_key_football" translatable="false">pref_section_football</string>
    <string name="pref_key_law" translatable="false">pref_section_law</string>
    <string name="pref_key_life_style" translatable="false">pref_section_life_style</string>
    <string name="pref_key_media" translatable="false">pref_section_media</string>
    <string name="pref_key_money" translatable="false">pref_section_money</string>
    <string name="pref_key_music" translatable="false">pref_section_music</string>
    <string name="pref_key_news_australia" translatable="false">pref_section_news_australia</string>
    <string name="pref_key_news_uk" translatable="false">pref_section_news_uk</string>
    <string name="pref_key_news_us" translatable="false">pref_section_news_us</string>
    <string name="pref_key_news_world" translatable="false">pref_section_news_world</string>
    <string name="pref_key_opinion" translatable="false">pref_section_opinion</string>
    <string name="pref_key_politics" translatable="false">pref_section_politics</string>
    <string name="pref_key_science" translatable="false">pref_section_science</string>
    <string name="pref_key_society" translatable="false">pref_section_society</string>
    <string name="pref_key_sport" translatable="false">pref_section_sport</string>
    <string name="pref_key_stage" translatable="false">pref_section_stage</string>
    <string name="pref_key_tech" translatable="false">pref_section_tech</string>
    <string name="pref_key_tv_radio" translatable="false">pref_section_tv_radio</string>
    <string name="pref_key_travel" translatable="false">pref_section_travel</string>
    <string name="pref_key_weather" translatable="false">pref_section_weather</string>

    <string name="pref_key_change_sections" translatable="false">changeSections</string>

    <!--navbar titles -->
    <string name="nav_heading_headlines">Headlines</string>
    <string name="pref_heading_headlines">Show headlines</string>

    <string name="pref_title_headlines_aus">Australia headlines</string>
    <string name="pref_title_headlines_uk">UK headlines</string>
    <string name="pref_title_headlines_us">US headlines</string>
    <string name="pref_title_headlines_world">International headlines</string>

    <string name="nav_heading_sections">Sections</string>
    <string name="pref_heading_sections">Show sections</string>

    <string name="pref_title_art_design"><![CDATA[Art & Design]]></string>
    <string name="pref_title_books">Books</string>
    <string name="pref_title_business">Business</string>
    <string name="pref_title_culture">Culture</string>
    <string name="pref_title_education">Education</string>
    <string name="pref_title_environment">Environment</string>
    <string name="pref_title_fashion">Fashion</string>
    <string name="pref_title_film">Film</string>
    <string name="pref_title_football">Football</string>
    <string name="pref_title_law">Law</string>
    <string name="pref_title_life_style"><![CDATA[Life & Style]]></string>
    <string name="pref_title_media">Media</string>
    <string name="pref_title_money">Money</string>
    <string name="pref_title_music">Music</string>
    <string name="pref_title_news_australia">News Australia</string>
    <string name="pref_title_news_uk">News UK</string>
    <string name="pref_title_news_us">News US</string>
    <string name="pref_title_news_world">News World</string>
    <string name="pref_title_opinion">Opinion</string>
    <string name="pref_title_politics">Politics</string>
    <string name="pref_title_science">Science</string>
    <string name="pref_title_society">Society</string>
    <string name="pref_title_sport">Sport</string>
    <string name="pref_title_stage">Stage</string>
    <string name="pref_title_tech">Technology</string>
    <string name="pref_title_tv_radio"><![CDATA[TV & Radio]]></string>
    <string name="pref_title_travel">Travel</string>
    <string name="pref_title_weather">Weather</string>
    <string name="pref_title_search">Search</string>
    <string name="pref_title_saved">Saved articles</string>

    <string name="google_play_url" translatable="false">https://play.google.com/store/apps/details?id=com.rocdev.guardianreader</string>
    <string name="pref_heading_default_edition">Default Edition</string>
    <string name="pref_key_default_edition">pref_default_edition</string>
    <string name="pref_key_default_browser">pref_default_browser</string>
    <string name="title_no_network">No network…</string>

    <string name="banner_ad_unit_id_test_ad" translatable="false">ca-app-pub-3940256099942544~3347511713.</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-5360801122277083/1900074450</string>
    <string name="custom_small_ad_unit_id" translatable="false">ca-app-pub-5360801122277083/1464265651</string>

    <string name="app_id" translatable="false">ca-app-pub-5360801122277083~9423341257</string>
    <string name="test_device_code_nexus5x" translatable="false">91E22C61954590BECD82911B901E2A4B</string>
    <string name="test_device_code_nexus9" translatable="false">211FE69AEAB7D31887757EB42F4B4FE7</string>
    <string name="test_device_code_nexus9_2" translatable="false">98972484D7C2FB3D6418840A54464C6B</string>
    <string name="test_device_code_asus" translatable="false">0C5E05B3BEC799D8D8C245B35CDAD53F</string>
    <string name="more_button_text">10 more</string>
    <string name="save_article_error">Error with saving article</string>
    <string name="save_article_success">Article saved succefully</string>
    <string name="delete_article_error">Error with deleting article</string>
    <string name="delete_article_success">Deleted article</string>
    <string name="toast_no_network_alert">No network. Try again later</string>
    <string name="dialog_close_app_title">Close app</string>
    <string name="dialog_close_app_message">Are you sure you want to close the app?.</string>
    <string name="dialog_confirm_yes">Yes</string>
    <string name="dialog_confirm_cancel">Cancel</string>
    <string name="dialog_guardian_app_title">Guardian App</string>
    <string name="dialog_guardian_app_message">This app works very well together with the app from The Guardian. Would you like to install it?</string>
    <string name="dialog_confirm_no_thanks">No thanks</string>
    <string name="guardian_app_play_store" translatable="false">https://play.google.com/store/apps/details?id=com.guardian</string>
    <string name="dialog_save_article_title">Save article</string>
    <string name="dialog_save_article_message">Do you want to save this article?</string>
    <string name="dialog_delete_article_title">Delete article</string>
    <string name="dialog_delete_article_message">Do you want to delete this article from your saved articles list? This cannot be undone.</string>
    <string name="toast_refreshing_articles">Refreshing articles…</string>
    <string name="empty_string" />
    <string name="more_button_disabled">…</string>
    <string name="title_activity_article">Article</string>
    <string name="pref_summary_hidden">Hidden</string>
    <string name="pref_summary_shown">Shown</string>
</resources>
